Collection of all verbiage and grammar changes!

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "telapi",
-    "description": "A Telephony API That Does More!",
+    "description": "The Telephony API That Does More!",
     "homepage": "http://www.telapi.com",
     "repository": {
         "type": "git",
